--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,63 +1,132 @@
+@keyframes loading {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes showCards {
+  from{
+    opacity:0;
+    transform:translateX(-50px);
+  }
+  to{
+    opacity:1;
+    transform:translateX(0);
+  }
+}
+
+
+.loader{
+  animation: loading 2s linear infinite;
+  margin: 30px auto;
+  display: block;
+}
+
 .container{
     max-width: 1120px;
     margin: 0 auto;
     padding: 2.5rem 1rem;
 }
 
-.card-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
+.card-container {
+  display:flex;
+  flex-direction: column;
+  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.05);
+  animation: showCards 1s;
 }
 
 .card-content{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 25px;
-    padding: 10px 30px;
-    width: 25%;
-    box-shadow: 5px 5px #111111;
+    margin: 10px;
+    border-radius: 5px;
+    padding: 15px 20px 30px 20px;
     background-color: #111111;
+
 
     img{
         width: 200px;
+        border-radius: 50%;
     }
 
-    p {
-        font-weight: bold;
-        font-size: 20px;
-        margin-top: 10px;
+    h3 {
+        margin-top: 15px;
     }
 
     button {
-        width: 100px;
-        height: 20px;
-        border: 0;
-        background-color: #ffb703;
-        padding: 15px 30px;
-        display: flex;
-        align-items: center;
-        border-radius: 20px;
-        margin-top: 20px;
-        font-weight: bold;
-        cursor: pointer;
-        transition: filter 0.5s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 200px;
+      height: 30px;
+      border: 0;
+      background-color: #ffb703;
+      color:#111111;
+      padding: 20px 30px;
+      border-radius: 5px;
+      margin-top: 30px;
+      font-weight: 700;
+      font-size: 14px;
+      cursor: pointer;
+      transition: filter 0.5s;
 
-        &:hover{
-            filter: brightness(0.8);
-        }
+      &:hover{
+          filter: brightness(0.8);
+      }
     }
 
 }
 
 .card-details{
-    margin-top: 10px;
-    line-height: 20px;
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 
-    span {
-        margin-right: 20px;
+     span {
+        color: #dee2e6;
+        font-weight: 300;
+        font-size: 14px;
+
+        // & + span {
+        //   margin-left: 20px;
+        // }
     }
+
+}
+
+.button-footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    padding: 15px 30px;
+    background-color: #ffb703;
+    border: 0;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: filter 0.5s;
+
+    &:hover {
+      filter: brightness(0.8);
+    }
+
+    &:disabled{
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+  }
+
 
 }
