--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,5 +7,7 @@
 
 body {
     background: #000000;
-    color: #7a7a7a;
+    color: #ffffff;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
+
