--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -33,7 +33,7 @@
 
 
     img{
-        width: 200px;
+        width: 70%;
         border-radius: 50%;
     }
 
@@ -45,7 +45,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 200px;
+      width: 100%;
       height: 30px;
       border: 0;
       background-color: #ffb703;
